added add new task function + added swtiching task function

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <input type="text" class="header__input" placeholder="Do shopping..">
         <button class="header__btn">Add Task</button>
       </div>
+      <p class="header__error"></p>
     </header>
 
     <main class="tasks">
