edit task funcionality - HTML & CSS

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     <main class="tasks">
       
     </main>
+
+  </div>
+
+  <div class="modal-shadow"></div>
+  <div class="modal">
+    <h2 class="modal__title">Edit Your Task</h2>
+    <div class="modal__inputBox">
+      <input type="text" class="modal__input" placeholder="Do shopping..">
+      <button class="modal__btn modal__editTaskBtn">Edit Task</button>
+    </div>
+    <p class="modal__error"></p>
   </div>
 
 </body>
