added edit Task functionality

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="tasks">
-      
+
     </main>
 
   </div>
@@ -43,10 +43,11 @@
   <div class="modal">
     <h2 class="modal__title">Edit Your Task</h2>
     <div class="modal__inputBox">
-      <input type="text" class="modal__input" placeholder="Do shopping..">
+      <input type="text" class="modal__input">
       <button class="modal__btn modal__editTaskBtn">Edit Task</button>
     </div>
-    <p class="modal__error"></p>
+    <p class="modal__error">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <button class="modal__btn modal__closeBtn">Close</button>
   </div>
 
 </body>
