--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header">
       <h1 class="header__title">Write It Down</h1>
       <div class="header__inputBox">
-        <input type="text" class="header__input" placeholder="Do shopping..">
+        <input type="text" class="header__input" placeholder="Your task..">
         <button class="header__btn">Add Task</button>
       </div>
       <p class="header__error"></p>
